# asyn-oligomer-screen

./: .gitignore  ANCHORS.md  CLAUDE.md  EXPERIMENTS.md  GLOSSARY.md  LICENSE  README.md  STATUS.md  adduct_score.py  assembly.py  environment-md.yml  md_relax.py  oligomer_bestiary.html  protofilaments.py  pyproject.toml  requirements.txt  validate.py
.claude/: settings.json
broker/: Dockerfile  README.md  app.py  provision.py  requirements.txt
data/: README.md  brain_access.js  vicinity_molecules.js
docs/: HANDOFF.md  build_display.mjs  build_handoff.mjs  index.html  oligomer_bestiary.html
notebooks/: README.md  contribute.ipynb
oligomers/: README.md  build_fusco_trimer.py  run_ensemble.py  score_oligomer.py
ops/: analyze_dwell.ps1  asyn_block.py  asyn_diag.py  asyn_launch.py  asyn_pool.py  block.ps1  bootstrap_md_env.ps1  check_cluster.ps1  check_cluster.sh  e8_collect.ps1  e8_launch.ps1  e8_msm.py  e8_status.ps1  e8_swarm_runner.py  funnel.py  local.ps1.example  power.py  prereg.py  probe_md.ps1  run_pilot.ps1  size_sweep.py  stable_states.py  stage_md.ps1
results/: README.md  anchor_features.csv  anchor_scores.csv
scoring/: README.md  analyze_protofilaments.py  anchors.py  assembly.py  classifier.py  features.py  validate.py
screen/: README.md  adduct_score.py  chunk_store.py  contrib_gate.py  contribute_client.py  contributions.puml  dwell_time.py  hf_store.py  lease.py  md_env.py  md_relax.py  md_stage3.py  recompute_stage3.py  reputation.py  run_chunks.py  shape_metrics.py  spotcheck.py  stage3.py  sweep_oligomer.py
site/: build_display.mjs
(+55 files in other folders)
