[project]
name = "asyn-oligomer-screen"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "biopython>=1.81",
    "gemmi>=0.6",
    "matplotlib>=3.7",
    "meeko>=0.7",
    "numpy>=1.24",
    "pandas>=2.0",
    "peptidebuilder>=1.1",
    "pydssp>=0.9.1",
    "rdkit>=2024.3",
    "scipy>=1.11",
]

[dependency-groups]
md = [
    "openmm>=8.5.1",
    "pdbfixer>=1.12.0",
]
